--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "rm -rf .next && next dev -p 4000"
+    "dev": "ts-node index.ts"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
